--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,26 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "bokeh>=3.8.0",
+    "dask>=2025.10.0",
+    "distributed>=2025.10.0",
+    "fmpy>=0.3.26",
+    "h5py>=3.15.1",
     "hydra-core>=1.3.2",
+    "matplotlib>=3.10.7",
+    "mlflow>=3.5.0",
+    "numpy>=2.3.4",
+    "omegaconf>=2.3.0",
+    "onnx>=1.19.1",
+    "pandas>=2.3.3",
+    "pydantic>=2.12.3",
+    "pyyaml>=6.0.2",
+    "scipy>=1.16.2",
     "torch>=2.7.0",
     "torchaudio>=2.8.0",
+    "torchdiffeq>=0.2.5",
     "torchvision>=0.22.0",
+    "tqdm>=4.67.1",
 ]
 
 [project.urls]
@@ -35,6 +51,7 @@ dev = [
 [project.scripts]
 # this is a possibility to define commands
 modern_python_boilerplate = "modern_python_boilerplate.main:hello_world"
+fmu_simulate = "bnode_core.data_generation.utils.fmu_simulate:main"
 
 [build-system]
 requires = ["uv_build>=0.8.17,<0.9.0"]
