--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,8 +50,8 @@ dev = [
 
 [project.scripts]
 # this is a possibility to define commands
-modern_python_boilerplate = "modern_python_boilerplate.main:hello_world"
 fmu_simulate = "bnode_core.data_generation.utils.fmu_simulate:main"
+fmu_variable_names = "bnode_core.data_generation.utils.print_fmu_variable_names:main"
 
 [build-system]
 requires = ["uv_build>=0.8.17,<0.9.0"]
