--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pydantic>=2.12.3",
     "pyyaml>=6.0.2",
     "scipy>=1.16.2",
+    "seaborn>=0.13.2",
     "torch>=2.7.0",
     "torchaudio>=2.8.0",
     "torchdiffeq>=0.2.5",
