--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,20 +8,9 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "bokeh>=3.8.0",
-    "dask>=2025.10.0",
-    "distributed>=2025.10.0",
-    "fmpy>=0.3.26",
-    "h5py>=3.15.1",
-    "hydra-core>=1.3.2",
-    "matplotlib>=3.10.7",
     "mlflow>=3.5.0",
-    "numpy>=2.3.4",
     "omegaconf>=2.3.0",
     "onnx>=1.19.1",
-    "pandas>=2.3.3",
-    "pydantic>=2.12.3",
-    "pyyaml>=6.0.2",
     "scipy>=1.16.2",
     "seaborn>=0.13.2",
     "torch>=2.7.0",
@@ -30,6 +19,7 @@ dependencies = [
     "torchvision>=0.22.0",
     "tqdm>=4.67.1",
 ]
+
 
 [project.urls]
 Homepage = " "
@@ -48,6 +38,22 @@ dev = [
     "pre-commit",
     "rich",
 ]
+data_generation =[
+    "matplotlib>=3.10.7",
+    "distributed>=2025.10.0",
+    "bokeh>=3.8.0",
+    "dask>=2025.10.0",
+    "fmpy>=0.3.26",
+    "h5py>=3.15.1",
+    "hydra-core>=1.3.2",
+    "numpy>=2.3.4",
+    "pandas>=2.3.3",
+    "pydantic>=2.12.3",
+    "pyyaml>=6.0.2",
+]
+
+[tool.uv]
+default-groups = ["dev", "data_generation"]
 
 [project.scripts]
 # this is a possibility to define commands
