--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,7 +47,12 @@ plugins:
       preserve_includer_indent: true
 nav:
   - Home: index.md
-  - API Reference: reference.md
+  - API Reference: 
+    - reference.md
+    - Configuration:
+      - bnode_core/config.md
+    - bnode_core/filepaths.md
+  # - Configuration Reference: bnode_core/config.md
   - License: LICENSE.md
 markdown_extensions:
   - attr_list
