Trainer is running now. Updates: - works without cpu installation - now dataset config imported anymore - updated sequence length of config in every job, so "null"/"none" sequence length argument can be sued. - speed increase: only check cuda memory reseverd for specific parts in first epcoh. - catching exception if train info fails (e.g. division by 0 in time calcualtion)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ fmu_variable_names = "bnode_core.data_generation.utils.print_fmu_variable_names:
 data_generation = "bnode_core.data_generation.raw_data_generation:main"
 data_preperation = "bnode_core.data_generation.data_preperation:main"
 visualize_data = "bnode_core.data_generation.utils.visualize_data:main"
+trainer = "bnode_core.ode.trainer:main"
 
 [build-system]
 requires = ["uv_build>=0.8.17,<0.9.0"]
