Enhance BNODE Export Functionality and Testing
- Updated .gitignore to exclude coverage reports and unnecessary test results.
- Modified VSCode settings to include verbose output and coverage reporting for pytest.
- Added documentation for BNODE module and export process in bnode.md and bnode_export.md.
- Updated mkdocs.yml to reflect new documentation structure for BNODE.
- Added onnx_export_pytest.yaml configuration for ONNX export testing.
- Enhanced onnx_export_config_class in config.py to include model loading parameters.
- Implemented detailed docstring in bnode_export.py for clarity on export process.
- Added new tests for BNODE training and export in test_bnode.py and test_bnode_export.py.
- Improved error handling and logging in trainer.py and bnode_export.py.

--- a/.gitignore
+++ b/.gitignore
@@ -205,4 +205,12 @@ mlruns/*
 mlruns/*
 mlflow/*
 .vscode/*
+
+# Coverage reports
+tests/_results/*
+
+# I should not need these
 _tests/*
+_tests_results/*
+tests/results*
+
