Enhance dataset preparation and raw data generation modules with comprehensive documentation and CLI usage examples
- Added detailed module docstrings for `data_preperation.py` and `raw_data_generation.py`, outlining functionality, command-line usage, and configuration details.
- Improved function docstrings throughout both modules to clarify parameters, return values, and exceptions.
- Updated `filepaths.py` to refine config directory recognition logic and improve help messaging.
- Modified test cases to utilize a new configuration name for pytest, ensuring isolation during testing.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,10 @@ nav:
   - Home: index.md
   - API Reference: 
     - reference.md
+    - Data Generation:
+      - bnode_core/data_generation/introduction.md
+      - bnode_core/data_generation/raw_data_generation.md
+      - bnode_core/data_generation/data_preperation.md
     - (B)NODE Module:
       - bnode_core/ode/trainer.md
       - BNODE:
