Add VAE implementation and utilities for neural network training
- Introduced nn_utils documentation for normalization, data loading, KL divergence, early stopping, parameter counting, and capacity scheduling.
- Created VAE architecture and training/testing modules with detailed docstrings.
- Added configuration files for VAE model training.
- Updated mkdocs.yml to include new neural network documentation.
- Enhanced the training pipeline with MLflow integration and early stopping mechanisms.
- Implemented unit tests for various VAE modes and configurations.
- Updated dependencies in pyproject.toml for improved testing capabilities.
- Refactored code for better organization and clarity.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,8 +60,11 @@ nav:
         - bnode_core/ode/bnode/bnode.md
         - bnode_core/ode/bnode/bnode_export.md
       - bnode_core/ode/node.md
-      - Utilities:
+      - ODE Utilities:
         - bnode_core/ode/trainer_utils/test_from_mlflow.md
+    - Neural Networks:
+      - bnode_core/nn/nn_utils.md
+      - bnode_core/nn/vae.md
     - bnode_core/filepaths.md
 
   - Config:
