--- a/resources/config/train_test_ode.yaml
+++ b/resources/config/train_test_ode.yaml
@@ -4,7 +4,7 @@ defaults:
   - _self_
 
 dataset_name: null
-dataset_path: resources\data\surrogate-test-data\data\datasets\StratifiedHeatFlowModel_v3_c-RROCS__n-100_pytest\StratifiedHeatFlowModel_v3_c-RROCS__n-100_pytest_dataset.hdf5
+dataset_path: resources/data/surrogate-test-data/data/datasets/StratifiedHeatFlowModel_v3_c-RROCS__n-100_pytest/StratifiedHeatFlowModel_v3_c-RROCS__n-100_pytest_dataset.hdf5
 
 mlflow_experiment_name: Default
 
