Updated plot_gui with copilot to use plotly and be browser based.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,10 @@ torch =[
     "torchdiffeq>=0.2.5",
     "torchvision>=0.22.0",
 ]
+plotly =[
+    "dash>=3.3.0",
+    "plotly>=6.4.0",
+]
 
 [tool.uv]
 default-groups = ["dev", "torch"]
@@ -80,6 +84,7 @@ data_preperation = "bnode_core.data_generation.data_preperation:main"
 visualize_data = "bnode_core.data_generation.utils.visualize_data:main"
 trainer = "bnode_core.ode.trainer:main"
 bnode_export = "bnode_core.ode.bnode.bnode_export:main"
+plot_gui = "bnode_core.plots.timeseries.plot_gui:main"
 
 [build-system]
 requires = ["uv_build>=0.8.17,<0.9.0"]
